--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -1,9 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.benyuan.xiaojs.common.pulltorefresh.core.PullToRefreshExpandableListView
+
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/list_contact"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@color/white"
         >
 
-</com.benyuan.xiaojs.common.pulltorefresh.core.PullToRefreshExpandableListView>
+    <EditText
+            android:id="@+id/search_view"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/px80"
+            android:hint="@string/search"
+            android:background="@drawable/common_edittext_bg"
+            android:drawableLeft="@drawable/ic_search"
+            android:layout_margin="10dp"
+            android:padding="5dp"/>
+
+    <com.benyuan.xiaojs.common.pulltorefresh.core.PullToRefreshExpandableListView
+            android:id="@+id/list_contact"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:groupIndicator="@drawable/ic_expand_selector"
+            style="@style/ex_listview_group"
+            />
+
+</LinearLayout>
+
+
