--- a/app/src/main/res/layout/layout_common_dialog.xml
+++ b/app/src/main/res/layout/layout_common_dialog.xml
@@ -28,12 +28,13 @@
 
     <FrameLayout
             android:id="@+id/common_dialog_container"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="15dp"/>
 
     <View
             style="@style/DividerHorizontal"
-            android:layout_marginTop="@dimen/px60"/>
+            android:layout_marginTop="@dimen/px40"/>
 
     <LinearLayout
             android:orientation="horizontal"
