--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -100,4 +100,10 @@
         <item>精选推荐</item>
         <item>小教室秘书</item>
     </string-array>
+    <string-array name="post_security_level">
+        <item>所有人</item>
+        <item>仅好友</item>
+        <item>班级圈</item>
+        <item>部分人</item>
+    </string-array>
 </resources>
