--- a/app/src/main/res/layout/layout_person_block_item.xml
+++ b/app/src/main/res/layout/layout_person_block_item.xml
@@ -85,12 +85,17 @@
             <TextView
                     android:id="@+id/person_item_focus"
                     android:textColor="@color/font_orange"
-                    android:padding="@dimen/px5"
+                    android:paddingTop="@dimen/px5"
+                    android:paddingBottom="@dimen/px5"
+                    android:paddingLeft="@dimen/px15"
+                    android:paddingRight="@dimen/px15"
+                    android:drawablePadding="@dimen/px5"
+                    android:drawableLeft="@drawable/ic_follow_plus"
                     android:layout_marginLeft="@dimen/px30"
                     android:minWidth="@dimen/px120"
                     android:layout_alignParentLeft="true"
                     android:gravity="center"
-                    android:background="@drawable/ic_course_category"
+                    android:background="@drawable/orange_stoke_bg"
                     android:text="@string/follows"
                     android:textSize="@dimen/font_30px"
                     android:layout_width="wrap_content"
