--- a/app/src/main/res/layout/activity_global_search.xml
+++ b/app/src/main/res/layout/activity_global_search.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
+              android:background="@color/white"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
     <com.benyuan.xiaojs.ui.widget.IconTextView
             android:id="@+id/tt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    <com.benyuan.xiaojs.ui.widget.ImageMatrixExpandableLayout
+            android:id="@+id/image_expand"
+            android:layout_marginLeft="@dimen/px30"
+            android:layout_marginRight="@dimen/px30"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 </LinearLayout>
