--- a/app/src/main/res/layout/layout_moment_detail_header.xml
+++ b/app/src/main/res/layout/layout_moment_detail_header.xml
@@ -18,8 +18,49 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
+    <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        <TextView
+                android:id="@+id/moment_detail_prise_sum"
+                android:textColor="@color/common_text"
+                android:textSize="@dimen/font_28px"
+                android:text="22人觉得很赞"
+                android:layout_marginLeft="@dimen/px30"
+                android:layout_alignParentLeft="true"
+                android:paddingTop="@dimen/px30"
+                android:paddingBottom="@dimen/px30"
+                android:layout_centerInParent="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        <TextView
+                android:id="@+id/moment_detail_prise"
+                android:textColor="@color/common_text"
+                android:textSize="@dimen/font_28px"
+                android:text="赞"
+                android:drawableLeft="@drawable/ic_praise_off"
+                android:drawablePadding="@dimen/px10"
+                android:layout_marginLeft="@dimen/px30"
+                android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"
+                android:layout_marginRight="@dimen/px30"
+                android:paddingTop="@dimen/px30"
+                android:paddingBottom="@dimen/px30"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+    </RelativeLayout>
+
+    <com.benyuan.xiaojs.ui.widget.ImageMatrixExpandableLayout
+            android:id="@+id/moment_detail_image_expand"
+            android:layout_marginLeft="@dimen/px30"
+            android:layout_marginRight="@dimen/px30"
+            android:layout_marginBottom="@dimen/px30"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
     <View
-            android:layout_marginTop="@dimen/px30"
             android:layout_width="match_parent"
             android:layout_height="@dimen/px30"
             android:background="@color/main_bg"/>
@@ -33,4 +74,5 @@
             android:layout_marginTop="@dimen/px30"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+
 </LinearLayout>
