教室_白板_修改样式

--- a/app/src/main/res/drawable/wb_paint_progress_bar.xml
+++ b/app/src/main/res/drawable/wb_paint_progress_bar.xml
@@ -28,7 +28,7 @@ limitations under the License.
             <shape>
                 <corners android:radius="1dip" />
 
-                <solid android:color="@color/main_orange" />
+                <solid android:color="@color/main_blue" />
             </shape>
         </clip>
     </item>
