教室_白板_类名重命名

--- a/app/src/main/res/layout/activity_classroom.xml
+++ b/app/src/main/res/layout/activity_classroom.xml
@@ -17,7 +17,7 @@
                 android:visibility="invisible"/>
 
         <!--白板-->
-        <com.benyuan.xiaojs.ui.classroom.whiteboard.WhiteBoard
+        <com.benyuan.xiaojs.ui.classroom.whiteboard.Whiteboard
                 android:id="@+id/white_board"
                 android:background="@color/white"
                 android:layout_width="match_parent"
