--- a/app/src/main/res/layout/activity_post_dynamic.xml
+++ b/app/src/main/res/layout/activity_post_dynamic.xml
@@ -60,6 +60,7 @@
                 android:orientation="vertical"
                 android:padding="10dp">
             <EditText
+                    android:id="@+id/input_edit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="left"
