优化直播界面部分显示

--- a/app/src/main/res/layout/activity_global_search.xml
+++ b/app/src/main/res/layout/activity_global_search.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
-              android:background="@color/white"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
@@ -14,6 +13,22 @@
             android:id="@+id/image_expand"
             android:layout_marginLeft="@dimen/px30"
             android:layout_marginRight="@dimen/px30"
+            android:background="@color/white"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    <com.benyuan.xiaojs.ui.widget.LiveProgress
+            android:layout_marginTop="@dimen/px30"
+            android:layout_marginLeft="@dimen/px30"
+            android:layout_marginRight="@dimen/px30"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    <com.benyuan.xiaojs.ui.widget.flow.ImageFlowLayout
+            android:id="@+id/flow"
+            android:background="@color/white"
+            android:layout_marginRight="@dimen/px30"
+            android:layout_marginLeft="@dimen/px30"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 </LinearLayout>
