--- a/app/src/main/res/layout/activity_lession_detail.xml
+++ b/app/src/main/res/layout/activity_lession_detail.xml
@@ -27,7 +27,7 @@
         <ImageView
                 android:id="@+id/favourite_btn"
                 android:paddingLeft="@dimen/px32"
-                android:layout_toLeftOf="@+id/share_btn"
+                android:layout_toLeftOf="@+id/share_wb_btn"
                 android:layout_centerInParent="true"
                 android:paddingRight="@dimen/px32"
                 android:paddingTop="@dimen/px16"
@@ -37,7 +37,7 @@
                 android:src="@drawable/favourite_selector"/>
 
         <ImageView
-                android:id="@+id/share_btn"
+                android:id="@+id/share_wb_btn"
                 android:layout_alignParentRight="true"
                 android:layout_centerInParent="true"
                 android:paddingLeft="@dimen/px32"
