--- a/app/src/main/res/layout/layout_classroom_panel.xml
+++ b/app/src/main/res/layout/layout_classroom_panel.xml
@@ -72,6 +72,16 @@
                     android:layout_toRightOf="@+id/back_btn"
                     android:src="@drawable/ic_cr_start"/>
 
+            <ImageView
+                    android:id="@+id/exit_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:paddingLeft="@dimen/px20"
+                    android:paddingRight="@dimen/px20"
+                    android:layout_toRightOf="@+id/play_pause_btn"
+                    android:src="@drawable/ic_cr_exit"/>
+
             <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -147,7 +157,7 @@
                 android:gravity="center_vertical"
                 android:layout_below="@+id/title_bar"
                 android:layout_centerHorizontal="true"
-                android:background="@drawable/live_progress_bg">
+                android:background="@drawable/cr_corner_gray_bg">
 
             <TextView
                     android:id="@+id/play_time"
@@ -195,39 +205,44 @@
             android:layout_marginLeft="@dimen/px10"
             android:orientation="vertical">
 
+        <TextView
+                android:id="@+id/blackboard_switcher_tips"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center"
+                android:text="2"
+                android:textSize="@dimen/font_20px"
+                android:paddingLeft="@dimen/px15"
+                android:paddingRight="@dimen/px15"
+                android:textColor="@color/white"
+                android:background="@drawable/ic_cr_tips_bg"/>
+
         <ImageView
                 android:id="@+id/blackboard_switcher_btn"
-                android:layout_width="@dimen/px60"
-                android:layout_height="@dimen/px60"
-                android:layout_centerInParent="true"
-                android:layout_alignParentRight="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:src="@drawable/cr_blackboard_switcher"/>
 
         <ImageView
-                android:id="@+id/courese_ware_btn"
-                android:layout_width="@dimen/px60"
-                android:layout_height="@dimen/px60"
-                android:layout_centerInParent="true"
-                android:layout_alignParentRight="true"
+                android:id="@+id/course_ware_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/px10"
                 android:src="@drawable/cr_teaching_switcher"/>
 
 
         <ImageView
                 android:id="@+id/qa_btn"
-                android:layout_width="@dimen/px60"
-                android:layout_height="@dimen/px60"
-                android:layout_centerInParent="true"
-                android:layout_alignParentRight="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:src="@drawable/cr_qa"
                 android:layout_marginTop="@dimen/px10"/>
 
         <ImageView
                 android:id="@+id/more_btn"
-                android:layout_width="@dimen/px60"
-                android:layout_height="@dimen/px60"
-                android:layout_centerInParent="true"
-                android:layout_alignParentRight="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:src="@drawable/cr_more"
                 android:layout_marginTop="@dimen/px10"/>
 
@@ -241,42 +256,41 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="@dimen/px10"
+            android:background="@drawable/cr_corner_gray_bg"
+            android:paddingLeft="@dimen/px20"
+            android:paddingRight="@dimen/px20"
             android:orientation="horizontal">
 
         <ImageView
-                android:id="@+id/screen_share_btn"
-                android:layout_width="@dimen/px60"
-                android:layout_height="@dimen/px60"
-                android:layout_centerInParent="true"
-                android:layout_alignParentRight="true"
-                android:src="@drawable/cr_qa"/>
+                android:id="@+id/main_screen_setting"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/px20"
+                android:src="@drawable/cr_main_screen"/>
 
         <ImageView
-                android:id="@+id/doodle_btn"
-                android:layout_width="@dimen/px60"
-                android:layout_height="@dimen/px60"
-                android:layout_centerInParent="true"
-                android:layout_alignParentRight="true"
-                android:src="@drawable/cr_qa"
-                android:layout_marginLeft="@dimen/px10"/>
+                android:id="@+id/wb_coordination_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/px20"
+                android:visibility="gone"
+                android:layout_marginLeft="@dimen/px80"/>
 
         <ImageView
-                android:id="@+id/share_btn"
-                android:layout_width="@dimen/px60"
-                android:layout_height="@dimen/px60"
-                android:layout_centerInParent="true"
-                android:layout_alignParentRight="true"
-                android:src="@drawable/cr_qa"
-                android:layout_marginLeft="@dimen/px10"/>
+                android:id="@+id/share_white_board_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/px20"
+                android:visibility="gone"
+                android:layout_marginLeft="@dimen/px80"/>
 
         <ImageView
-                android:id="@+id/download_btn"
-                android:layout_width="@dimen/px60"
-                android:layout_height="@dimen/px60"
-                android:layout_centerInParent="true"
-                android:layout_alignParentRight="true"
-                android:src="@drawable/cr_qa"
-                android:layout_marginLeft="@dimen/px10"/>
+                android:id="@+id/save_white_board_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/cr_save_whiteboard"
+                android:padding="@dimen/px20"
+                android:layout_marginLeft="@dimen/px40"/>
 
     </LinearLayout>
 
