--- a/app/src/main/res/layout/activity_base_scroll_tab.xml
+++ b/app/src/main/res/layout/activity_base_scroll_tab.xml
@@ -8,8 +8,7 @@
             android:id="@+id/pager_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            />
+            android:orientation="vertical"/>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                     android:id="@+id/scroll_tab_header"
@@ -75,4 +74,9 @@
                 android:layout_height="wrap_content"/>
 
     </RelativeLayout>
+
+    <View
+            android:id="@+id/scroll_tab_header_divider"
+            style="@style/DividerHorizontal"
+            android:layout_below="@id/scroll_tab_header"/>
 </RelativeLayout>
