--- a/app/src/main/res/layout/layout_person_home_footer.xml
+++ b/app/src/main/res/layout/layout_person_home_footer.xml
@@ -16,12 +16,16 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content">
 
-            <ImageView
+            <TextView
                     android:layout_gravity="center"
-                    android:scaleType="fitXY"
-                    android:paddingTop="@dimen/px15"
-                    android:paddingBottom="@dimen/px15"
-                    android:src="@drawable/send_message_selector"
+                    android:paddingTop="@dimen/px20"
+                    android:paddingBottom="@dimen/px20"
+                    android:drawableLeft="@drawable/send_message_selector"
+                    android:textColor="@color/common_text"
+                    android:textSize="@dimen/font_28px"
+                    android:text="消息"
+                    android:gravity="center"
+                    android:drawablePadding="@dimen/px15"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
         </FrameLayout>
@@ -31,12 +35,16 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content">
 
-            <ImageView
+            <TextView
                     android:layout_gravity="center"
-                    android:scaleType="fitXY"
-                    android:paddingTop="@dimen/px15"
-                    android:paddingBottom="@dimen/px15"
-                    android:src="@drawable/counsel_selector"
+                    android:paddingTop="@dimen/px20"
+                    android:paddingBottom="@dimen/px20"
+                    android:drawableLeft="@drawable/counsel_selector"
+                    android:textColor="@color/common_text"
+                    android:textSize="@dimen/font_28px"
+                    android:text="约辅导"
+                    android:gravity="center"
+                    android:drawablePadding="@dimen/px15"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
         </FrameLayout>
@@ -46,12 +54,16 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content">
 
-            <ImageView
+            <TextView
                     android:layout_gravity="center"
-                    android:scaleType="fitXY"
-                    android:paddingTop="@dimen/px15"
-                    android:paddingBottom="@dimen/px15"
-                    android:src="@drawable/put_question_selector"
+                    android:paddingTop="@dimen/px20"
+                    android:paddingBottom="@dimen/px20"
+                    android:drawableLeft="@drawable/put_question_selector"
+                    android:textColor="@color/common_text"
+                    android:textSize="@dimen/font_28px"
+                    android:text="提问"
+                    android:gravity="center"
+                    android:drawablePadding="@dimen/px15"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
         </FrameLayout>
