--- a/app/src/main/res/layout/layout_classroom_panel.xml
+++ b/app/src/main/res/layout/layout_classroom_panel.xml
@@ -86,7 +86,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:layout_toRightOf="@+id/play_pause_btn"
+                    android:layout_toRightOf="@+id/exit_btn"
                     android:layout_toLeftOf="@+id/contact_btn"
                     android:gravity="center"
                     android:orientation="vertical">
