--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -106,4 +106,11 @@
         <item>班级圈</item>
         <item>部分人</item>
     </string-array>
+
+    <string-array name="ugc_more">
+        <item>忽略此条动态</item>
+        <item>忽略Ta的动态</item>
+        <item>取消关注</item>
+        <item>举报</item>
+    </string-array>
 </resources>
